refactoring: !!!доработать получение первого значения начала даты из списка.... повторить методы!!!